# mr-pirus

./: .gitignore  Cargo.toml  README.md
c1/: CMakeLists.txt  file  main.c
c2/: quiz.html
c3/: ascii.txt  disassemble.txt  ls_mem.txt  shadow.txt  tex2hex.txt
c4/: words.txt
src/: clear.rs  main.rs  webserver.rs
web/: quiz.html  start.html
